# getjticket_project

./: README.md  pyproject.toml
src/getjticket/: getjticket.py
